smaller navbar everywhere

--- a/hugo/layouts/partials/header_navbar.html
+++ b/hugo/layouts/partials/header_navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light bg-gradient shadow-sm py-0 mb-3 mb-md-4 mb-xl-5">
-  <div id="navbar-container" class="container-fluid col-xl-11 mx-auto px-0">
+  <div id="navbar-container" class="container-xl col-xl-11 mx-auto px-0">
     <a class="navbar-brand" href={{ absURL "" }}>
       <img src={{ absURL "images/acl-logo.svg" }} width=56 alt="ACL Logo">
       <span class="d-inline ps-2">ACL Anthology</span>
