Fix the "fix data" dialog layout

--- a/hugo/layouts/papers/single.html
+++ b/hugo/layouts/papers/single.html
@@ -411,26 +411,26 @@
                 guidelines</a> if you need to change the PDF.
             </div>
             <div class="mb-3">
-              <label for="paperTitle" class="form-label">Title</label>
-              <small id="paperTitleHelp" class="form-text text-muted">Adjust the title. Retain tags such as
+              <label for="paperTitle" class="form-label d-block">Title</label>
+              <small id="paperTitleHelp" class="form-text text-muted d-block mb-2">Adjust the title. Retain tags such as
                 &lt;fixed-case&gt;.</small>
               <input type="text" class="form-control" id="paperTitle">
             </div>
-            <label class="form-label">Authors</label>
-            <small id="authorTitleHelp" class="form-text text-muted">Adjust author names and order to match the
+            <label class="form-label d-block">Authors</label>
+            <small id="authorTitleHelp" class="form-text text-muted d-block mb-2">Adjust author names and order to match the
               PDF.</small>
             <div id="authorsContainer" class="px-3" ondrop="dropAuthor(event)" ondragover="allowDrop(event)"></div>
             <button type="button" class="btn btn-secondary btn-sm mb-3" onclick="addAuthor()">Add Author</button>
 
             <div class="mb-3">
-              <label for="paperAbstract" class="form-label">Abstract</label>
-              <small id="abstractTitleHelp" class="form-text text-muted">Correct abstract if needed. Retain XML formatting tags such as &lt;tex-math&gt;. You may use &lt;b&gt;...&lt;/b&gt; for <b>bold</b>, &lt;i&gt;...&lt;/i&gt; for <i>italic</i>, and &lt;url&gt;...&lt;/url&gt; for URLs.</small>
+              <label for="paperAbstract" class="form-label d-block">Abstract</label>
+              <small id="abstractTitleHelp" class="form-text text-muted d-block mb-2">Correct abstract if needed. Retain XML formatting tags such as &lt;tex-math&gt;. You may use &lt;b&gt;...&lt;/b&gt; for <b>bold</b>, &lt;i&gt;...&lt;/i&gt; for <i>italic</i>, and &lt;url&gt;...&lt;/url&gt; for URLs.</small>
               <textarea class="form-control" id="paperAbstract" rows="6"></textarea>
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Verification against PDF</label>
-              <small class="form-text text-muted">Ensure that the new title/authors match the snapshot below. (If there
+              <label class="form-label d-block">Verification against PDF</label>
+              <small class="form-text text-muted d-block mb-2">Ensure that the new title/authors match the snapshot below. (If there
                 is no snapshot or it is too small, consult <a href="#" id="paperPDF">the PDF</a>.)</small>
               <div style="max-height:150px;" class="overflow-hidden w-100" style="text-align: center;">
                 <a id="paperSnapshot" href="#"><img id="paperSnapshotImg" src=""
