Correct Bootstrap 5 utility classes project-wide
- Update legacy 'font-weight-*' classes to 'fw-*'
- Update legacy 'font-italic' to 'fst-italic'
- Update legacy 'text-monospace' to 'font-monospace'
- Restore bolding of last names in author alternative names section

--- a/hugo/layouts/events/single.html
+++ b/hugo/layouts/events/single.html
@@ -8,7 +8,7 @@
   <span>{{ . }}</span><br/>
   {{ end }}
   {{ with $event.dates }}
-  <span class="font-weight-light text-muted">{{ . }}</span><br/>
+  <span class="fw-light text-muted">{{ . }}</span><br/>
   {{ end }}
   <hr />
 
