--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -16,7 +16,7 @@
   <div class="col-12 col-xl-2">
     <h2 class="ps-2 pb-2">Welcome to the ACL Anthology!</h2>
 
-    <aside class="card acl-greeting font-weight-light mb-3">
+    <aside class="card acl-greeting fw-light mb-3">
       <div class="card-body">
         The ACL Anthology currently hosts {{ $.Scratch.Get "paper_count" }} papers on the study of computational linguistics and natural language processing.
       </div>
