--- a/hugo/layouts/info/single.html
+++ b/hugo/layouts/info/single.html
@@ -9,7 +9,7 @@
   <hr />
 
   {{ if not .Date.IsZero }}
-  <p class="font-weight-light font-italic text-muted">{{ .Date.Format "January 2, 2006" }}</p>
+  <p class="fw-light fst-italic text-muted">{{ .Date.Format "January 2, 2006" }}</p>
   {{ end }}
 
   {{ .Content }}
